--- a/src/popup/styles.css
+++ b/src/popup/styles.css
@@ -79,6 +79,16 @@ p {
     margin-bottom: 0rem;
 }
 
+.formCount select#selectedFormInput {
+    width: 100%;
+    padding: 10px;
+    font-size: 1em;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    background-color: #f9f9f9;
+    cursor: pointer;
+}
+
 .recording-controls {
     display: flex;
     align-items: center;
@@ -100,6 +110,7 @@ p {
     border-radius: 5px;
     background-color: #f9f9f9;
     cursor: pointer;
+    margin-bottom: 10px;
 }
 
 .recording-controls select {
